added new instructions to running the file